--- a/index.html
+++ b/index.html
@@ -1,11 +1,61 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="hu">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="macs.css">
     <title>Macskák kommunikációi</title>
 </head>
 <body>
-    
+      <nav></nav>
+      <div class="grid-container">
+      <div class="cim"><h1>Macskák kommunikációi</h1></div>
+      <div class="bevezeto"><p>
+          Macskáink társas állatok, csak úgy, mint a kutyáink. Ezáltal csak úgy mint a kutyáink, a macskáknak vannak különféle testbeszédeik, amikkel valamilyen információt szeretnének közölni velünk. A macskák pontosan ugyanazt a tesbeszédet alkalmazzák velünk szemben, mint a saját fajta társaikkal. Ezeken a pontokon átmenve, jobban szót fogunk érteni a macskánkal.
+      </p></div>
+      <div class="pont1"><h2>Farok</h2>
+      <p>A macska farka a leginformatívabb testrésze számunkra. Rengeteg információt tud közölni vele a macskánk felé, elégedettségtől, az ijedtségen át, a fájdalom keresztül, az örömig. Ha a macskánk farka gerincéhez képest felfele áll, az elégetességet jelez, és ezt próbáljuk elérni mindenképp. A következő listában megtalálhatóak a gyakoribb esetek:</p></div>
+      <div class="kep"><img src="img/cattail.jpg" alt="macska farka" id="farok"></div>
+      <div class="cselekmeny">
+      <p class="oszloptető"><h3>Mit látunk</h3></p>        
+      </div>
+      <div class="ok"><p class="oszloptető"><h3>Oka</h3></p>
+      </div>
+          <div class="farok1"><h3>Farok csapdosás</h3></div>
+          <div class="farok1ok">A farok csapkdosása az ingerültség jele, az esetek többségében.</div>
+          <div class="farok2">A macskánk rángatja a farkát</div>
+          <div class="farok2ok">A macskánk rendkívűl izgatott izgatott. Esetleg így köszön el tőlünk.</div>
+          <div class="farok3">A macska a lába közé húzza a lábát</div>
+          <div class="farok3ok">A macskánk fél, vagy megijedt, illetve szégyenli magát valami miatt</div>
+          <div class="farok4">Farkcsóválás(mint egy kutyánál)</div>
+          <div class="farok4ok">A macskánk veszélyt érez a háta mögött, és ezzel próbálja felmérni azt.</div>
+          <div class="farok5">A macska farka a lába köré van tekerve</div>
+          <div class="farok5ok">A macskánk nyugalomban van.</div>
+      <div class="pont2">
+          <h2>Szem, és fül</h2>
+          <p>A macskák kinagyítiják a pupillájukat, illetve a fülüket előreszegezik, vadászat, illetve játék közben. Ilyenkor nagyon összpontosítanak valamire, és meglehet őket ilyeszteni, ha megzavarnánk.</p>
+      </div>
+      <div class="pont3">
+        <h2>Hátborzolás</h2>
+        <p>A macskánk felfogja borzolni a szőrt a hátán, párosítva az előbb említett farok rángatással: Így akar a macskánk nagyobbnak, és veszélyesebbnek tűnni</p>
+      </div>
+          <div class="forrasok">
+            <h3>Források:</h3>
+            <ul>
+              <li> <a href="https://www.haziallat.hu/macska/viselkedes/hogyan-kommunikalnak-a-macskak/3842/">https://www.haziallat.hu/macska/viselkedes/hogyan-kommunikalnak-a-macskak/3842/</a></li>
+              <li><a href="https://www.elte.hu/content/hogyan-beszelget-a-macska-es-gazdaja.t.17115">https://www.elte.hu/content/hogyan-beszelget-a-macska-es-gazdaja.t.17115</a></li>
+              <li><a href="https://www.zooplus.hu/magazin/macska-magazin/macskatartas/macska-kommunikacio">https://www.zooplus.hu/magazin/macska-magazin/macskatartas/macska-kommunikacio</a> </li>
+              <li><a href="https://www.haziallat.hu/macska/viselkedes/macska-testbeszed-kommunikacio/5296/">https://www.haziallat.hu/macska/viselkedes/macska-testbeszed-kommunikacio/5296/</a></li>
+            </ul>
+          </div>
+          <div class="kepforrasok">
+            <ul>
+              <h3>képek forrásai:</h3>
+              <li><a href="https://unsplash.com/photos/mJaD10XeD7w">https://unsplash.com/photos/mJaD10XeD7w</a></li>
+              <li><a href="https://unsplash.com/photos/LEpfefQf4rU">https://unsplash.com/photos/LEpfefQf4rU</a></li>
+              <li><a href=""></a></li>
+            </ul>
+          </div>
+      </div>
 </body>
 </html>
