--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
       <div class="grid-container">
         <div class="nav">
           <nav>
-      <button href="index.html">Főoldal</button>
-      <button href="info.html">További információ a macskákról</button>
+      <a href="index.html">Főoldal</a>
+      <a href="info.html">További információ a macskákról</a>
       </nav>   
         </div>
       <div class="cim"><h1>Macskák kommunikációi</h1></div>
